# alloy

./: .gitignore  CMakeLists.txt  Makefile  README.md  alloy  matrix_addition
.cache/clangd/index/: alloy.c.079511245737791F.idx  argument.h.08DA8DA0C32EDDA8.idx  argument_descriptor.h.69991892DFE093CA.idx  argument_encoder.h.06AE952DA33E9881.idx  attribute.h.62B0AC1556673B5D.idx  attribute_vertex.h.57D0AD3C58D8DB47.idx  buffer.h.9F25BFD506924557.idx  cmt.h.4ABCFBE2E6C74225.idx  command_buf.h.FA20F374E9ED3365.idx  command_buf_indirect.h.5A5EEDD40F8FCA15.idx  command_enc.h.5ABE6EAE0D048BC2.idx  command_enc_blit.h.5CF2277F357F6C55.idx  command_enc_compute.h.B027479C8D9E620C.idx  command_enc_render.h.12CAED69AE47E0F6.idx  command_queue.h.9198B66DF8203920.idx  common.h.26FED58E80E025D6.idx  common_internal.h.D48D21376EE6229E.idx  compile-opts.h.1CFAE7B374A09DAF.idx  compute-pipeline.h.A7119FD087B7285B.idx  constant_values.h.16E0149DE68C1A10.idx  depthstencil.h.2693B1B268970F42.idx  descriptor.h.F74613AE16BF1755.idx  device.h.FB584C6FA432E9A8.idx  enums.h.EF1848802E99B63E.idx  error.h.26B23D7EE96573C4.idx  error_handling.h.64C5CF8B5187B749.idx  event.h.ED9536961C2A2A3B.idx  function.h.33472426F90C2748.idx  heap.h.A864F77A86BC2F5D.idx  (+13 more)
alloy.dSYM/Contents/: Info.plist
include/cmt/: argument_buffer.h  argument_descriptor.h  argument_encoder.h  cmt.h  command_buf_indirect.h  command_enc.h  command_enc_blit.h  command_enc_compute.h  command_enc_render.h  device.h  error_handling.h  resource.h  types_metal.h
include/impl/: conversion.h
src/: alloy.c  error_handling.m  main.c
(+19 files in other folders)
